# Fixed-Point-DSP

./: CMakeLists.txt  LICENSE  README.md
document/doxygen/: Doxyfile
include/: CMakeLists.txt
include/imfixedpoint/: conversion.hpp  dsp.hpp  imfp_exception.hpp  number.hpp
src/test/: CMakeLists.txt  conversion_test.cpp  dsp_test.cpp  number_test.cpp
